Update file with responses

--- a/exercise-1/exercise.ipynb
+++ b/exercise-1/exercise.ipynb
@@ -17,10 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = random.randint(1, 20)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -31,10 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num == 12"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(num < 5) or (num > 15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " 3 <= num <= 18 and num != 11"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +134,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5999999999999996\n",
+      "2.6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5.1 - 2.5 == 2.6\n",
+    "    #returns False\n",
+    "    #this is because floats are not exact\n",
+    "    \n",
+    "print(5.1 - 2.5)\n",
+    "    #try rounding so that this yields True\n",
+    "    \n",
+    "print(round(5.1-2.5, 1))\n",
+    "    # returns 2.6\n",
+    "\n",
+    "round(5.1 - 2.5, 1) == 2.6\n",
+    "    #works"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,10 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def de_morgan(P, Q):\n",
+    "    output_1 = P and not Q\n",
+    "    print(output_1)\n",
+    "    output_2 = not P and Q\n",
+    "    print(output_2)\n",
+    "    output_3 = not(P and Q)\n",
+    "    print(output_3)\n",
+    "    output_4 = (not P) or (not Q)\n",
+    "    print(output_4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,10 +209,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "P=True\n",
+    "Q=False\n",
+    "\n",
+    "de_morgan (P, Q)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your favorite word: omnipotent\n"
+     ]
+    }
+   ],
+   "source": [
+    "fav_word = input(\"Enter your favorite word: \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,10 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(fav_word) > 8"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +291,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fav_word.islower()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,10 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fav_word == fav_word.endswith(\"n\") or fav_word.startswith(\"i\")"
+   ]
   }
  ],
  "metadata": {
@@ -194,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "colors": {
